tests/ui/resolve/regression-struct-called-as-function-148919.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `Bar`
  --> $DIR/regression-struct-called-as-function-148919.rs:5:9
   |
LL |         Bar(self)
   |         ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
