tests/ui/resolve/regression-struct-called-as-function-148919.rs
struct Bar {}

impl Bar {
    fn into_self(self) -> Bar {
        Bar(self)
        //~^ ERROR expected function, tuple struct or tuple variant, found struct `Bar` [E0423]
    }
}

fn main() {}
